--- a/EHS_Newspaper/style.css
+++ b/EHS_Newspaper/style.css
@@ -1,16 +1,26 @@
+/* Need to fix this  */
+@font-face {
+    font-family: "Chomsky";
+    src: url('./fonts/chomsky.regular-webfont.woff2') format('woff2'), 
+         url('./fonts/chomsky.regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
-.contentDiv{
+.contentDiv {
     border-radius: 8px;
     padding: 10px;
     border: solid;
 }
 
-#home{
+#home {
     font-size: 90px;
     text-align: left;
     color:white;
-    background-color: rgb(123, 123, 255);
-    width: 100%;
+    background-image: url('Images/collection-newspapers.jpg');
+    background-size: cover;
+    background-position: center; /* Optional: to center the image */
+    font-family: 'Chomsky';
 }
 
 .wrapper {
@@ -19,9 +29,9 @@
 
 .sidebar {
     border-radius: 8px;
-    border: 5px solid rgb(41,80,142);
+    border: 5px solid rgb(255, 145, 56);
     width:  85px;
-    background-color: rgb(13,68,15);
+    background-color: rgb(41,80,142);
     padding:  20px;
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     height:  100%;
@@ -32,18 +42,3 @@
     transition:  0.5s; /* Smooth transition */
     width: 80%;
 }
-
-
-
-/* Need to fix this  */
-/* @font-face {
-    font-family: "Chomsky";
-    src: url(EHS_Newspaper\Fonts\webfontkit-20240221-003032'.eot'); 
-    src: url('path-to-your-font/YourFontFile.eot?#iefix') format('embedded-opentype'), 
-         url('path-to-your-font/YourFontFile.woff2') format('woff2'), 
-         url('path-to-your-font/YourFontFile.woff') format('woff'), 
-         url('path-to-your-font/YourFontFile.ttf') format('truetype'), 
-         url('path-to-your-font/YourFontFile.svg#svgFontName') format('svg');
-  
-} */
-
